--- a/sonicadmin/index.html
+++ b/sonicadmin/index.html
@@ -44,6 +44,22 @@
         <div class="col m4 l4"></div>
     </div>
 
+<div class="modal" id="loadingModal">
+    <div class="modal-content center-align">
+        <div class="preloader-wrapper big active">
+            <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                <div class="circle"></div>
+                </div><div class="gap-patch">
+                <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="/script/jquery.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
